; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_vlan.c_vlan_lookup_parent_and_tag.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_vlan.c_vlan_lookup_parent_and_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.ifnet*, i32)* @vlan_lookup_parent_and_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @vlan_lookup_parent_and_tag(%struct.ifnet* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ifnet*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ifnet*, %struct.ifnet** %4, align 8
  %8 = call i32* @parent_list_lookup(%struct.ifnet* %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32* @vlan_parent_lookup_tag(i32* %12, i32 %13)
  store i32* %14, i32** %3, align 8
  br label %16

15:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %16

16:                                               ; preds = %15, %11
  %17 = load i32*, i32** %3, align 8
  ret i32* %17
}

declare dso_local i32* @parent_list_lookup(%struct.ifnet*) #1

declare dso_local i32* @vlan_parent_lookup_tag(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
